--- a/src/main/resources/templates/th/admin/statAdmin/productManagement.html
+++ b/src/main/resources/templates/th/admin/statAdmin/productManagement.html
@@ -1,10 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="th/layout/adminLayout">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link th:href="@{/plugins/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
 </head>
 <body>
+<div id="wrapper">
+    <div layout:fragment="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <!-- DataTales Example -->
+                    <div class="card card-info">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                제품관리
+                                <table id="userTable" border="1">
+                                    <thead>
+                                    <tr>
+                                        <th>count</th>
+                                        <th>productNo</th>
+                                        <th>sellerName</th>
+                                        <th>productName</th>
+                                        <th>modelName</th>
+                                        <th>customerPrice</th>
+                                        <th>sellPrice</th>
+                                        <th>purchasePrice</th>
+                                        <th>productCreateDate</th><!--
+        <th>payCode</th>
+        <th>orderCode</th>-->
 
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="list, stat : ${productVOList}">
+                                        <td th:text="${stat.count}">1</td>
+                                        <td th:text="${list.productNo}">마</td>
+                                        <td th:text="${list.sellerName}">마</td>
+                                        <td th:text="${list.productName}">마</td>
+                                        <td th:text="${list.modelName}">마</td>
+                                        <td th:text="${list.customerPrice}">마</td>
+                                        <td th:text="${list.sellPrice}">마</td>
+                                        <td th:text="${list.purchasePrice}">마</td>
+                                        <td th:text="${list.productCreateDate}">마</td><!--
+        <td th:text="${orderList.payCode}">마</td>
+        <td th:text="${orderList.orderCode}">마</td>-->
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
