--- a/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
+++ b/src/main/resources/templates/th/admin/statAdmin/spendingPattern.html
@@ -30,7 +30,7 @@
         </div>
 
         <!-- 차트 지우고 다시 만들어아햐나? -->
-        <script th:inline="javascript" type="text/javascript">
+        <script th:inline="javascript">
             var jsonData;
             var chart1Data;
             var options;
@@ -69,12 +69,12 @@
                 var b1 = year2+'-'+month2+'-'+day2;
                 console.log("a1:"+a1);
                 var dateform = {
-                   /* year1 : year1,
-                    year2 : year2,
-                    month1 : month1,
-                    month2 : month2,
-                    day1 : day1,
-                    day2 : day2*/
+                    /* year1 : year1,
+                     year2 : year2,
+                     month1 : month1,
+                     month2 : month2,
+                     day1 : day1,
+                     day2 : day2*/
                     date1 : date1,
                     date2 : date2
 
@@ -213,19 +213,19 @@
 
 
 
-                function drawCanvas() {
+            function drawCanvas() {
 
 
 
-                    var chart1Canvas = document.getElementById("myChart");
-                    var ctx = chart1Canvas.getContext('2d');
-                    var myNewChart = new Chart(ctx, {
-                        type: 'pie',
-                        data: chart1Data,
-                        options: options
-                    });
-                    oldGraph = myNewChart;
-                }
+                var chart1Canvas = document.getElementById("myChart");
+                var ctx = chart1Canvas.getContext('2d');
+                var myNewChart = new Chart(ctx, {
+                    type: 'pie',
+                    data: chart1Data,
+                    options: options
+                });
+                oldGraph = myNewChart;
+            }
 
 
         </script>
