--- a/src/main/resources/templates/th/main/productDetails.html
+++ b/src/main/resources/templates/th/main/productDetails.html
@@ -131,8 +131,8 @@
                     return false;">
                         장바구니
                     </button>
-                    <a href="/basketPop" value="저장" onClick="saveSessionStorage(); return false;">저장</a>
-                    <a href="/basketPop" rel="modal:open" onclick="saveSessionStorage();">모달창띄우기</a>
+                    <!--<a href="/basketPop" value="저장" onClick="saveSessionStorage(); return false;">저장</a>
+                    <a href="/basketPop" rel="modal:open" onclick="saveSessionStorage();">모달창띄우기</a>-->
                     <button type="submit" class="btn-buy-now">바로구매</button>
 
                 </div>
@@ -275,38 +275,38 @@
                     alert("색상 선택하세요")
                     window.location.href = '/';
                 }else{
-                if (localSessionItem == null) {
-                    console.log("localSessionItem is Null입니다")
-                    b = 0;
-                    console.log("before arr : " + arr);
-                    localStored[0] = arr;
-                    console.log(localStored[0]);
-                    console.log("생 arr : " + localStored);
-                    first = "첫번째";
-                    localStorage.setItem("saveL", JSON.stringify(localStored));
-                } else {
-                    first = "두번째";
-                    b = 0;
-                    console.log("localSession is not Null : ");
-                    for (var i = 0; i < localStored.length; i++) {
-                        console.log("localStored : " + localStored);
-                        if (localStored[b][0] == value && localStored[b][1] == colorValue) {
-                            console.log("로컬 이미 저장돼있습니다");
-                            break;
+                    if (localSessionItem == null) {
+                        console.log("localSessionItem is Null입니다")
+                        b = 0;
+                        console.log("before arr : " + arr);
+                        localStored[0] = arr;
+                        console.log(localStored[0]);
+                        console.log("생 arr : " + localStored);
+                        first = "첫번째";
+                        localStorage.setItem("saveL", JSON.stringify(localStored));
+                    } else {
+                        first = "두번째";
+                        b = 0;
+                        console.log("localSession is not Null : ");
+                        for (var i = 0; i < localStored.length; i++) {
+                            console.log("localStored : " + localStored);
+                            if (localStored[b][0] == value && localStored[b][1] == colorValue) {
+                                console.log("로컬 이미 저장돼있습니다");
+                                break;
+                            }
+                            if (localStored[b + 1] == undefined) {
+                                console.log(b);
+                                localStored[b + 1] = arr;
+                                console.log("b+1은? " + localStored[b + 1] + " & localStored : " + localStored);
+                                localStorage.setItem("saveL", JSON.stringify(localStored));
+                                break;
+                            }
+                            b++;
                         }
-                        if (localStored[b + 1] == undefined) {
-                            console.log(b);
-                            localStored[b + 1] = arr;
-                            console.log("b+1은? " + localStored[b + 1] + " & localStored : " + localStored);
-                            localStorage.setItem("saveL", JSON.stringify(localStored));
-                            break;
-                        }
-                        b++;
+
                     }
 
-                }
-
-                ajaxSessionStorage();
+                    ajaxSessionStorage();
                 }
             } else {
                 var selectOption = $('#inputGroupSelect01').val();
@@ -363,7 +363,6 @@
                 }
                 ,
                 success: function (e) {
-                    alert("ajax완료")
                     window.open('/basketPop', '_blank', 'width=300px,height=300px,resizable=no,scrollbars=no,status=no,left=0px,top=0px');
                 }, error: function () {
                     console.log("test err");
@@ -406,9 +405,9 @@
         // sessionStorage.setItem(key, value);
         //console.log("@@@@@@@@@@@@@@@ valList : "+valList);
 
-    }
-    else
-    {
+        }
+        else
+        {
         console.log("memId : ~ajax " + memId);
 
         var selectOption = document.getElementById("inputGroupSelect01");
@@ -447,9 +446,9 @@
             });
         }
 
-    }
-    }
-    */
+        }
+        }
+        */
 
 
     </script>
